server/kube/deployment-prod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    tags.datadoghq.com/env: atmos-${DEPLOY_ENV}
    tags.datadoghq.com/service: docportal
    tags.datadoghq.com/version: ${TAG_VERSION}
    app: docportal-app
  name: docportal-app-deployment
  namespace: doctools
spec:
  selector:
    matchLabels:
      app: docportal-app
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        tags.datadoghq.com/env: atmos-${DEPLOY_ENV}
        tags.datadoghq.com/service: docportal
        tags.datadoghq.com/version: ${TAG_VERSION}
        app: docportal-app
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::710503867599:role/aws_gwre-ccs-prod_tenant_doctools_developer
    spec:
      containers:
        - name: docportal
          image: artifactory.guidewire.com/doctools-docker-dev/docportal:${TAG_VERSION}
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sleep
                  - '30'
          command: [ \"/bin/sh\", \"-c\" ]
          args: [ \"until wget -qO- http://localhost:15000/server_info | grep '\\\"state\\\": \\\"LIVE\\\"'; do echo 'Waiting for Istio sidecar'; sleep 1 ; done ; echo 'istio sidecar available'; node server.js\" ]
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /alive
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 45
          readinessProbe:
            httpGet:
              path: /alive
              port: 8081
            initialDelaySeconds: 150
            periodSeconds: 45
          resources:
            requests:
              memory: \"8G\"
              cpu: \"2\"
            limits:
              memory: \"16G\"
              cpu: \"4\"
      imagePullSecrets:
        - name: artifactory-secret
