server/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}-deployment
  namespace: ${POD_NAME}
  labels:
    tags.datadoghq.com/env: atmos-${DEPLOY_ENV}
    tags.datadoghq.com/service: ${DD_SERVICE_NAME}
    tags.datadoghq.com/version: ${TAG_VERSION}
    app: ${APP_NAME}
    gwcp.guidewire.com/dept: \"${DEPT_CODE}\"
    gwcp.guidewire.com/maintained-by: ${POD_NAME}
    gwcp.guidewire.com/created-by: ${POD_NAME}
    gwcp.guidewire.com/tenant-name: ${POD_NAME}
    gwcp.guidewire.com/version: ${TAG_VERSION}
    gwcp.guidewire.com/app-name: ${APP_NAME}
spec:
  selector:
    matchLabels:
      app: ${APP_NAME}
  # If you change the number of replicas, you have to update the step for checking pod status in settings.kts.
  replicas: ${NUMBER_OF_REPLICAS}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      name: ${APP_NAME}-deployment
      namespace: ${POD_NAME}
      labels:
        tags.datadoghq.com/env: atmos-${DEPLOY_ENV}
        tags.datadoghq.com/service: ${DD_SERVICE_NAME}
        tags.datadoghq.com/version: ${TAG_VERSION}
        app: ${APP_NAME}
        gwcp.guidewire.com/dept: \"${DEPT_CODE}\"
        gwcp.guidewire.com/maintained-by: ${POD_NAME}
        gwcp.guidewire.com/created-by: ${POD_NAME}
        gwcp.guidewire.com/tenant-name: ${POD_NAME}
        gwcp.guidewire.com/version: ${TAG_VERSION}
        gwcp.guidewire.com/app-name: ${APP_NAME}
      annotations:
        iam.amazonaws.com/role: ${AWS_ROLE}
    spec:
      containers:
        - name: docportal
          image: ${AWS_ECR_REPO}:${TAG_VERSION}
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sleep
                  - '30'
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /alive
              port: 8081
            initialDelaySeconds: 300
            periodSeconds: 120
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /alive
              port: 8081
            initialDelaySeconds: 300
            periodSeconds: 120
            timeoutSeconds: 10
          resources:
            requests:
              memory: \"${REQUESTS_MEMORY}\"
              cpu: \"${REQUESTS_CPU}\"
            limits:
              memory: \"${LIMITS_MEMORY}\"
              cpu: \"${LIMITS_CPU}\"
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-service
  namespace: ${POD_NAME}
  labels:
    app: ${APP_NAME}
    gwcp.guidewire.com/dept: \"${DEPT_CODE}\"
    gwcp.guidewire.com/maintained-by: ${POD_NAME}
    gwcp.guidewire.com/created-by: ${POD_NAME}
    gwcp.guidewire.com/tenant-name: ${POD_NAME}
    gwcp.guidewire.com/version: ${TAG_VERSION}
    gwcp.guidewire.com/app-name: ${APP_NAME}
spec:
  ports:
    - name: http
      port: 8081
  selector:
    app: ${APP_NAME}
