server/kube/ingress-prod.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: doctools
  name: docportal-ingress
  annotations:
    ingress.kubernetes.io/config-backend: |
      http-response add-header Content-Security-Policy \"frame-ancestors\ https://*.guidewire.net\ https://*.guidewire.com\"
      http-response add-header X-Frame-Options SAMEORIGIN
      http-response add-header Access-Control-Allow-Origin *
      http-response add-header Access-Control-Allow-Methods \"GET, OPTIONS\"
      http-response add-header Access-Control-Allow-Headers *
spec:
  rules:
    - host: docs.guidewire.com
      http:
        paths:
          - backend:
              serviceName: docportal-app
              servicePort: 8081
            path: /
    - host: portal2.guidewire.com
      http:
        paths:
          - backend:
              serviceName: docportal-app
              servicePort: 8081
            path: /
